    during compilation as an error.

- ?/??/????, Quantity Added to Read
  * Altered read-descr to accept an optional quantity argument.
  * Added the quantity field to mqo_descr
  * Altered mqo_read_data_mt to use the quantity field.
  * Altered all uses of port-read-fn to include quantity arguments.
  * Added mqo_flush_buffer and flush-buffer

- ?/??/????, Filter Ports and Crypto Filters
  (define rx-key (make-cfb aes iv aes-encrypt))
  (define tx-key (make-cfb aes iv aes-encrypt))
  (set-process-output! (encrypt-output (process-output) tx-key cfb-encrypt))
  (set-process-input! (encrypt-input (process-input) rx-key cfb-decrypt))
  
  * Added the lib/filter module
  * Added filter-output, filter-input and filter-port to lib/filter
  * Added the lib/crypto-port module
  * Added the buffer-empty? primitive.
  * Modified make-buffer to make capacity optional
  * Added the crypto-port test suite.
  * Added buffer-skip primitive.

- 5/08/2006, Integration of ECDH cipher from LibTomCrypt
  * Added (random? value) -> #t or #f
  * Added mqo_ecdh_key subtype of mqo_key
  * Added (make-ecdh-key key-size data) -> ecdh-key
  * Added (import-ecdh data) -> ecdh-key
  * Added (export-public-ecdh key) -> string
  * Added (export-private-ecdh key) -> string
  * Added (ecdh-shared-secret local remote) -> string
  * Added (ecdh-key? value) -> #t or #f
  * Added (ecdh-public-key? value) -> #t or #f
  * Added (ecdh-private-key? value) -> #t or #f
  * Added tests for AES, XOR, BASE64, ECDH to test/crypto

- 5/07/2006, Integration of AES cipher from LibTomCrypt
  * Added mqo_aes_key subtype of mqo_key
  * Added (make-aes-key key-size data) -> aes-key
  * Added (aes-key? value) -> #t or #f
  * Added (aes-encrypt aes-key plaintext random) -> ciphertext
  * Added (aes-decrypt aes-key ciphertext) -> plaintext
  * Added (xor-string string mask) -> string
  * Added lib/cfb, a generic implementation of Cipher-Feedback Mode.
  * Added (key-size key) -> integer