@@ -1,8 +1,6 @@
 #!/bin/sh
 
-STUB=$1
-PROG=$2
-OUTP=$3
+LIBDIR=$1
 
 if [ x$USE_GUILE != x ]; then
     DO_SCHEME="guile --debug -l lib/run-guile.scm -e guile-main -s"
@@ -14,11 +12,11 @@ else
     exit 1
 fi
 
-LIBS=`ls lib/*.ms`
+LIBS=`ls $LIBDIR/*.ms`
 LIBS_MO=""
 
 for LIB_MS in $LIBS; do
-    LIB=lib/`basename $LIB_MS .ms`
+    LIB=$LIBDIR/`basename $LIB_MS .ms`
     LIB_MS=$LIB.ms
     LIB_MO=$LIB.mo
     if [ ! -s $LIB_MO ]||[ $LIB_MS -nt $LIB_MO ]; then
